# Projeto_DBT_Datawarehouse

./: .user.yml  README.md  profiles.yml  pyproject.toml
app/: app.py
datawarehouse/: dbt_project.yml
datawarehouse/models/: schema.yml
datawarehouse/models/datamart/: dm_commodities.sql  schema.yml
datawarehouse/models/staging/: stg_commodities.sql  stg_movimentacao_commodities.sql
src/: config.py  extract_load.py
